WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27630
[V8] More V8 bindings changes to use ErrorEvent.
https://bugs.webkit.org/show_bug.cgi?id=27630
Summary
[V8] More V8 bindings changes to use ErrorEvent.
Jian Li
Reported
2009-07-23 16:56:42 PDT
More V8 bindings changes are needed in order to use ErrorEvent.
Attachments
Proposed Patch
(3.61 KB, patch)
2009-07-23 17:02 PDT
,
Jian Li
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jian Li
Comment 1
2009-07-23 17:02:10 PDT
Created
attachment 33394
[details]
Proposed Patch
Eric Seidel (no email)
Comment 2
2009-07-23 23:08:02 PDT
Comment on
attachment 33394
[details]
Proposed Patch LGTM.
Jian Li
Comment 3
2009-07-24 10:31:15 PDT
Committed as
http://trac.webkit.org/changeset/46360
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug