2009-07-24  Jian Li  <jianli@chromium.org>

Reviewed by Eric Seidel.

        [V8] More V8 bindings changes to use ErrorEvent.
        https://bugs.webkit.org/show_bug.cgi?id=27630

        * bindings/v8/DOMObjectsInclude.h:
        * bindings/v8/DerivedSourcesAllInOne.cpp:
        * bindings/v8/V8DOMWrapper.cpp:
        (WebCore::V8DOMWrapper::convertEventToV8Object):
        * bindings/v8/V8Index.cpp:
        * bindings/v8/V8Index.h:

Canonical link: https://commits.webkit.org/37970@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46360 268f45cc-cd09-0410-ab3c-d52691b4dbfc