WebCore/bindings/v8/V8Index.h
@@ -409,11 +409,19 @@ typedef v8::Persistent<v8::FunctionTemplate> (*FunctionTemplateFactory)();
 #define DOM_OBJECT_STORAGE_TYPES(V)
 #endif
 
+#if ENABLE(WORKERS)
+#define DOM_OBJECT_WORKERS_TYPES(V)                                     \
+    V(ERROREVENT, ErrorEvent)
+#else
+#define DOM_OBJECT_WORKERS_TYPES(V)
+#endif
+
 #define DOM_OBJECT_TYPES(V)                                             \
     DOM_OBJECT_TYPES_1(V)                                               \
     DOM_OBJECT_TYPES_2(V)                                               \
     DOM_OBJECT_DATABASE_TYPES(V)                                        \
-    DOM_OBJECT_STORAGE_TYPES(V)
+    DOM_OBJECT_STORAGE_TYPES(V)                                         \
+    DOM_OBJECT_WORKERS_TYPES(V)
 
 #if ENABLE(SVG)
 // SVG_OBJECT_TYPES are svg non-node, non-pod types.
